# Fantasy

./: .gitignore  Dockerfile  README.md  pyproject.toml  roster_example.csv
.bin/: fs_bash  fs_build  fs_format  fs_optimize_roster  fs_optimize_to_default  fs_own  fs_roster
scripts/: optimize_roster.py  roster.py
