[tool.poetry]
name = "fantasy"
version = "0.1.0"
description = "Fantasy tools"
authors = ["Lee Dennis"]

[tool.poetry.dependencies]
python = "3.9"
beautifulsoup4 = "4.9.*"
lxml = "4.5.*"
requests = "2.24.*"
fuzzywuzzy = "0.18.*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
